--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ before_install:
   - export PATH=$PATH:$GAUGE_PREFIX/bin
 
 install:
-  - ./install_js.sh
+  - gauge config gauge_repository_url https://raw.githubusercontent.com/getgauge/gauge-nightly-repository/master/
+  - gauge install js
 
 script:
   - gauge run specs
