--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,7 @@ init:
 build_script:
 - ps: |
     go get -d github.com/getgauge/gauge
+    echo %GOPATH%
     cd %GOPATH% + "\bin\gauge"
     git checkout request_timeout
     go get github.com/getgauge/gauge
