--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ init:
 build_script:
 - ps: |
     go get -d github.com/getgauge/gauge
-    cd $env:GOPATH\bin\gauge
+    cd $env:GOPATH\src\github.com\getgauge\gauge
     git checkout request_timeout
     go get github.com/getgauge/gauge
     $env:Path = "c:\Program Files\Gauge\bin;" + [System.Environment]::GetEnvironmentVariable("Path","Machine") + ";" + [System.Environment]::GetEnvironmentVariable("Path","User")
