--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,7 @@ build_script:
     cd $env:GOPATH\src\github.com\getgauge\gauge
     git checkout request_timeout
     go get github.com/getgauge/gauge
-    $env:Path = "c:\Program Files\Gauge\bin;" + [System.Environment]::GetEnvironmentVariable("Path","Machine") + ";" + [System.Environment]::GetEnvironmentVariable("Path","User")
+    $env:Path = "c:\Program Files\Gauge\bin;" + [System.Environment]::GetEnvironmentVariable("Path","Machine") + ";" + [System.Environment]::GetEnvironmentVariable("Path","User") + ";" +  "c:\gopath\bin"
     Write-Host "PATH : $($env:PATH)"
     gauge version
     gauge install
